# web-crawler-with-database-and-gui-integration

./: README.md
crawler/: gui.py  main.py
database/: init_db.py
url_manager/: CMakeLists.txt  content_processor.cpp  html_parser.py  main.cpp  url_manager.cpp  url_manager.h  utils.cpp  utils.h
